# FerroFlux2

./: .gitignore  Cargo.toml  ferroflux.key  openai.yaml
apps/playground/: Cargo.toml
apps/playground/src/: main.rs
apps/tauri-playground/: package-lock.json  package.json  svelte.config.mjs  tsconfig.json
apps/tauri-playground/src/: app.html
apps/tauri-playground/src-tauri/: Cargo.toml  tauri.conf.json
apps/tauri-playground/src-tauri/src/: commands.rs  engine.rs  lib.rs  main.rs  state.rs  types.rs
apps/tauri-playground/src/lib/: types.ts
crates/FerroFlux-core/: Cargo.toml
crates/FerroFlux-core/assets/runtimes/: loop.wat  simple.wat
crates/FerroFlux-core/src/: app.rs  graph_loader.rs  lib.rs  resources.rs  schema.rs  secrets.rs
crates/FerroFlux-core/src/api/: events.rs  mod.rs
crates/FerroFlux-core/src/api/handlers/: graph.rs  mod.rs  pin.rs  registry.rs  simulation.rs  trigger.rs
crates/FerroFlux-core/src/components/: agent.rs  compute.rs  connectors.rs  control.rs  core.rs  execution_state.rs  integration.rs  io.rs  logic.rs  manipulation.rs  mod.rs  observability.rs  pipeline.rs  schema.rs  security.rs  shadow.rs
crates/FerroFlux-core/src/domain/: mod.rs  tenant.rs
crates/FerroFlux-core/src/integrations/: registry.rs
crates/FerroFlux-core/src/nodes/: definition.rs  mod.rs  yaml_factory.rs
crates/FerroFlux-core/src/resources/: registry.rs  templates.rs
crates/FerroFlux-core/src/security/: api_key.rs  encryption.rs  mod.rs
crates/FerroFlux-core/src/store/: analytics.rs  batcher.rs  blob.rs  cache.rs  database.rs  mod.rs
crates/FerroFlux-core/src/store/analytics/: clickhouse.rs  duckdb.rs
crates/FerroFlux-core/src/systems/: agent_exec.rs  agent_post.rs  agent_prep.rs  api_worker.rs  compute.rs  connectors.rs  control.rs  execution.rs  gateway.rs  io.rs  janitor.rs  logic.rs  manipulation.rs  mod.rs  observability.rs  pipeline.rs  scheduler.rs  transport.rs  utils.rs
crates/FerroFlux-core/src/systems/agent/: mod.rs  prep.rs
crates/FerroFlux-core/src/systems/connectors/: ftp.rs  rss.rs  ssh.rs  xml.rs
crates/FerroFlux-core/src/systems/io/: auth.rs  http.rs  templating.rs
crates/FerroFlux-core/src/systems/manipulation/: aggregator.rs  expression.rs  splitter.rs  stats.rs  transform.rs  window.rs
crates/FerroFlux-core/src/tools/: mod.rs  primitives.rs  registry.rs  tests.rs
crates/FerroFlux-core/src/tools/primitives/: emit.rs  http_client.rs  json_query.rs  log.rs  logic.rs  math.rs  rhai.rs  sleep.rs  switch.rs  trace.rs  variable.rs
crates/FerroFlux-core/src/traits/: node_factory.rs
crates/FerroFlux-core/tests/: agent_error_test.rs  agent_system_test.rs  compute_verification_test.rs  control_system_test.rs  expression_system_test.rs  graph_loader_test.rs  io_system_test.rs  logic_system_test.rs  manipulation_system_test.rs  observability_test.rs  secure_connection_test.rs  stats_system_test.rs  transport_optimization_test.rs  unified_pipeline_test.rs  window_system_test.rs  yaml_integration_test.rs
crates/FlowCanvas/: .gitignore  Cargo.toml  LICENSE  README.md
crates/FlowCanvas/examples/: headless_demo.rs
crates/FlowCanvas/src/: config.rs  history.rs  input.rs  interaction.rs  lib.rs  math.rs  model.rs  painter.rs  persistence.rs  render.rs  view.rs
crates/FlowCanvas/tests/: basic_test.rs  history_test.rs  interaction_test.rs  persistence_test.rs
crates/ferroflux-analytics/: Cargo.toml
crates/ferroflux-analytics/assets/sql/: analytics_clickhouse.sql  analytics_duckdb.sql
crates/ferroflux-analytics/src/: batcher.rs  clickhouse.rs  duckdb.rs  lib.rs
crates/ferroflux-bridge/: Cargo.toml
crates/ferroflux-bridge/examples/: simple_sync.rs
crates/ferroflux-bridge/src/: lib.rs
crates/ferroflux-iam/: Cargo.toml
crates/ferroflux-iam/src/: lib.rs
crates/ferroflux-inspector/: Cargo.toml
crates/ferroflux-inspector/src/: lib.rs  schema.rs
crates/ferroflux-sdk/: Cargo.toml
crates/ferroflux-sdk/examples/: simple_sync.rs
crates/ferroflux-sdk/src/: lib.rs
crates/ferroflux-security/: Cargo.toml
crates/ferroflux-security/src/: api_key.rs  network.rs
docs/: node_creation_guide.md  observability_guide.md  platform_integration.md  tools_reference.md
docs/proposals/: 001_testing_and_shadow_mode.md
(+10 files in other folders)
