[package]
name = "ferroflux_core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-channel = "2.3.1"
async-trait = "0.1.77"
bevy_ecs = "0.13.0"
blake3 = { version = "1.5.1", features = ["serde"] }
chrono = { version = "0.4.34", features = ["serde"] }
cron = "0.12.0"
dashmap = "5.5.3"
dotenv = "0.15.0"
ipnet = "2.9.0"
once_cell = "1.19.0"
petgraph = "0.6.4"
rand = "0.8.5"
reqwest = { version = "0.11.24", features = ["json", "blocking"] }
rhai = { version = "1.17.1", features = ["sync", "serde"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_yaml = "0.9.32"
tokio = { version = "1.36.0", features = ["full"] }
url = "2.5.0"
uuid = { version = "1.7.0", features = ["serde", "v4"] }
base64 = "0.22.1"
futures = "0.3.31"
async-stream = "0.3.6"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "chrono"] }
ferroflux-iam = { path = "../ferroflux-iam" }
jmespath = "0.4.0"
aes-gcm = "0.10"
hex = "0.4"
tracing = "0.1"
handlebars = "5.1.0"
evalexpr = "11.3"

# Connectivity Pack
rss = "2.0"
ssh2 = "0.9"
suppaftp = "5.0"
quick-xml = { version = "0.31", features = ["serialize"] }
schemars = { version = "0.8", features = ["chrono"] }
wasmtime = "19.0"
wasi-common = "19.0"
lettre = { version = "0.11.19", features = ["builder"] }

[dev-dependencies]
wiremock = "0.6"
