[package]
name = "ferroflux-iam"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono"] }
uuid = { version = "1.7", features = ["serde", "v4"] }
tokio = { version = "1.36", features = ["full"] }
tracing = "0.1"
