[package]
name = "ferroflux-inspector"
version = "0.1.0"
edition = "2024"

[dependencies]
ferroflux_core = { path = "../FerroFlux-core" }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
anyhow = "1.0.100"
thiserror = "1.0"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.36.0", features = ["full"] }
